fix(components): Fix image size in card component
This fix ensures that the image doesn't change size depending on the
size of the content area. It was previously using flex layout which meant
that in cases where a person had a lot of tags the image on the left
would shrink and leave an uneven layout when there were multiple
cards displayed on a page.

This change uses a more conventional float based layout to ensure the
image always remains the same width.

--- a/common/components/card/_card.scss
+++ b/common/components/card/_card.scss
@@ -1,7 +1,7 @@
+$_image-width: 80px;
+
 .app-card {
   @include govuk-clearfix;
-  display: flex;
-  align-items: flex-start;
   border-top: 1px solid $govuk-border-colour;
   padding-top: govuk-spacing(3);
   padding-bottom: govuk-spacing(3);
@@ -21,12 +21,12 @@
 }
 
 .app-card__aside {
-  margin-right: govuk-spacing(4);
+  float: left;
 }
 
 .app-card__image {
   display: block;
-  width: 80px;
+  width: $_image-width;
 }
 
 .app-card__badge {
@@ -41,7 +41,6 @@
 }
 
 .app-card__caption {
-  @include govuk-clearfix;
   @include govuk-font($size: 16);
   color: govuk-colour("dark-grey");
 }
@@ -57,7 +56,7 @@
 }
 
 .app-card__content {
-  flex-grow: 1;
+  margin-left: $_image-width + govuk-spacing(3);
 }
 
 .app-card__meta-list {
